# rust-graphics

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/shaders/: triangle.frag  triangle.vert
