[package]
name = "rust-graphics"
version = "0.1.0"
authors = ["Gautam Mekkat <Blue9@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.1"
gfx-hal = "0.5.0"
glsl-to-spirv = "0.1.7"

[target.'cfg(target_os = "macos")'.dependencies.backend]
package = "gfx-backend-metal"
version = "0.5.2"

[target.'cfg(windows)'.dependencies.backend]
package = "gfx-backend-dx12"
version = "0.5.3"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.backend]
package = "gfx-backend-vulkan"
version = "0.5.6"
